fix(community_partners): make speakers and community partners alignment to horizontal

--- a/_sass/_speakers.scss
+++ b/_sass/_speakers.scss
@@ -1,8 +1,9 @@
 .speakers-section {
   .speaker-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    align-items: baseline;
+    overflow-x: scroll;
     .speaker-card {
       max-width: 24rem;
       padding: 1rem;
@@ -12,6 +13,9 @@
           object-fit: cover;
           border-radius: 50%;
           transition: all 0.9s ease;
+          &.community-partners-img {
+            border-radius: 5%;
+          }
           &.img-special{
              box-shadow: 0 1px 8px #ccc;
             &:hover, &:focus{
